Update for PrusaSlicer 2.8.0

--- a/CoreXY Speeds - No Input Shaper/Ultra High Flow Hotend + CHT (44mm3)/Ellis_Decorative_Standard_44mm3.ini
+++ b/CoreXY Speeds - No Input Shaper/Ultra High Flow Hotend + CHT (44mm3)/Ellis_Decorative_Standard_44mm3.ini
@@ -1,3 +1,4 @@
+arc_fitting = disabled
 autoemit_temperature_commands = 0
 avoid_crossing_curled_overhangs = 0
 avoid_crossing_perimeters = 0
@@ -8,6 +9,7 @@ bed_shape = 0x0,350x0,350x350,0x350
 bed_temperature = 115
 before_layer_gcode = G92 E0\n
 between_objects_gcode = 
+binary_gcode = 0
 bottom_fill_pattern = monotoniclines
 bottom_solid_layers = 3
 bottom_solid_min_thickness = 0.6
@@ -19,6 +21,8 @@ bridge_speed = 140
 brim_separation = 0
 brim_type = outer_only
 brim_width = 0
+chamber_minimal_temperature = 40
+chamber_temperature = 50
 color_change_gcode = M600
 colorprint_heights = 
 complete_objects = 0
@@ -62,26 +66,42 @@ filament_cost = 22
 filament_density = 1.03
 filament_deretract_speed = nil
 filament_diameter = 1.75
+filament_infill_max_crossing_speed = 0
+filament_infill_max_speed = 0
 filament_load_time = 0
 filament_loading_speed = 28
 filament_loading_speed_start = 3
 filament_max_volumetric_speed = 0
 filament_minimal_purge_on_wipe_tower = 15
+filament_multitool_ramming = 0
+filament_multitool_ramming_flow = 10
+filament_multitool_ramming_volume = 10
 filament_notes = ""
+filament_purge_multiplier = 100%
 filament_ramming_parameters = "120 100 6.6 6.8 7.2 7.6 7.9 8.2 8.7 9.4 9.9 10.0| 0.05 6.6 0.45 6.8 0.95 7.8 1.45 8.3 1.95 9.7 2.45 10 2.95 7.6 3.45 7.6 3.95 7.6 4.45 7.6 4.95 7.6"
 filament_retract_before_travel = nil
 filament_retract_before_wipe = nil
 filament_retract_layer_change = nil
 filament_retract_length = nil
+filament_retract_length_toolchange = nil
 filament_retract_lift = nil
 filament_retract_lift_above = nil
 filament_retract_lift_below = nil
 filament_retract_restart_extra = nil
+filament_retract_restart_extra_toolchange = nil
 filament_retract_speed = nil
 filament_settings_id = "ABS - KVP"
+filament_shrinkage_compensation_xy = 0%
+filament_shrinkage_compensation_z = 0%
 filament_soluble = 0
 filament_spool_weight = 0
+filament_stamping_distance = 0
+filament_stamping_loading_speed = 20
 filament_toolchange_delay = 0
+filament_travel_lift_before_obstacle = nil
+filament_travel_max_lift = nil
+filament_travel_ramping_lift = nil
+filament_travel_slope = nil
 filament_type = ABS
 filament_unload_time = 0
 filament_unloading_speed = 90
@@ -107,7 +127,7 @@ gap_fill_enabled = 1
 gap_fill_speed = 30
 gcode_comments = 0
 gcode_flavor = klipper
-gcode_label_objects = 1
+gcode_label_objects = firmware
 gcode_resolution = 0
 gcode_substitutions = 
 high_current_on_filament_swap = 0
@@ -161,9 +181,12 @@ min_feature_size = 25%
 min_layer_height = 0.08
 min_print_speed = 10
 min_skirt_length = 20
+mmu_segmented_region_interlocking_depth = 0
 mmu_segmented_region_max_width = 0
+multimaterial_purging = 140
 notes = 
 nozzle_diameter = 0.4
+only_one_perimeter_first_layer = 0
 only_retract_when_crossing_perimeters = 1
 ooze_prevention = 0
 output_filename_format = [input_filename_base]-[printer_settings_id]-[filament_settings_id].gcode
@@ -186,6 +209,7 @@ perimeter_speed = 150
 perimeters = 3
 physical_printer_settings_id = 
 post_process = 
+prefer_clockwise_movements = 0
 print_host = 
 print_settings_id = Ellis - Decorative Standard (44mm³)
 printer_model = 
@@ -235,7 +259,7 @@ spiral_vase = 0
 staggered_inner_seams = 0
 standby_temperature_delta = -5
 start_filament_gcode = "; Filament gcode\n"
-start_gcode = {\n    local chamber_temperature = 0;\n    local material = filament_type[0];\n\n    if material == "ABS" then\n        chamber_temperature = 50;\n    elsif material == "ASA" then\n        chamber_temperature = 50;\n    elsif material == "PC" then\n        chamber_temperature = 70\n    endif\n}\nPRINT_START BED=[first_layer_bed_temperature] HOTEND={first_layer_temperature[initial_extruder]} CHAMBER={chamber_temperature}
+start_gcode = PRINT_START BED=[first_layer_bed_temperature] HOTEND={first_layer_temperature[initial_extruder]} CHAMBER=[chamber_temperature]
 support_material = 1
 support_material_angle = 0
 support_material_auto = 1
@@ -273,17 +297,21 @@ temperature = 250
 template_custom_gcode = 
 thick_bridges = 0
 thin_walls = 1
-threads = 8
-thumbnails = 32x32,400x300
+thumbnails = 32x32/PNG, 400x300/PNG
 thumbnails_format = PNG
 toolchange_gcode = 
 top_fill_pattern = monotoniclines
 top_infill_extrusion_width = 0.4
+top_one_perimeter_type = top
 top_solid_infill_acceleration = 1000
 top_solid_infill_speed = 60
 top_solid_layers = 5
 top_solid_min_thickness = 1
 travel_acceleration = 3500
+travel_lift_before_obstacle = 0
+travel_max_lift = 0
+travel_ramping_lift = 0
+travel_slope = 0
 travel_speed = 450
 travel_speed_z = 0
 use_firmware_retraction = 0
@@ -298,9 +326,11 @@ wipe = 0
 wipe_into_infill = 0
 wipe_into_objects = 0
 wipe_tower = 0
+wipe_tower_acceleration = 0
 wipe_tower_bridging = 10
 wipe_tower_brim_width = 2
 wipe_tower_cone_angle = 0
+wipe_tower_extra_flow = 100%
 wipe_tower_extra_spacing = 100%
 wipe_tower_extruder = 0
 wipe_tower_no_sparse_layers = 0
@@ -308,8 +338,8 @@ wipe_tower_rotation_angle = 0
 wipe_tower_width = 60
 wipe_tower_x = 180
 wipe_tower_y = 140
-wiping_volumes_extruders = 70,70
 wiping_volumes_matrix = 0
+wiping_volumes_use_custom_matrix = 0
 xy_size_compensation = 0
 z_offset = 0
 
